cmsapi/src/main/java/com/example/cmsapi/errors/errorresponses/ValidationErrorResponse.java
package com.example.cmsapi.errors.errorresponses;

import java.util.List;

public class ValidationErrorResponse {
    private List<String> errors;

    public ValidationErrorResponse(List<String> errors) {
        this.errors = errors;
    }

    public List<String> getErrors() {
        return errors;
    }

    public void setErrors(List<String> errors) {
        this.errors = errors;
    }
}

